--- a/config.json
+++ b/config.json
@@ -2,10 +2,10 @@
   "cache_time": 7200,
   "api_site": {
 
-    "iqiyizy"api"": {
-        ""name"":"-爱奇艺-",
-        ""api"": "https://iqiyizyapi.com/api.php/provide/vod",
-        ""detail"": "https://iqiyizy"api".com"
+    "iqiyizy"api": {
+        "name":"-爱奇艺-",
+        "api": "https://iqiyizyapi.com/api.php/provide/vod",
+        "detail": "https://iqiyizyapi.com"
     }
     "dbzy": {
       "name": "豆瓣资源",
@@ -277,3 +277,4 @@
   }
 
 }
+
